# contacts_management_system

./: .env.example  .gitignore  docker-compose.yml  pyproject.toml
app/: config.py  dependencies.py  main.py  utils.py
app/db/: base.py  session.py
app/db/models/: ContactModel.py  HistoryDetailsModel.py  HistoryModel.py  ImageModel.py  UserModel.py  WebHookModel.py  __init__.py
app/db/schemas/: ContactSchema.py  HistoryDetailsSchema.py  HistorySchema.py  ImageSchema.py  JwtSchema.py  UserSchema.py  WebHookSchema.py
app/models/: Item.py  User.py
app/repository/: ContactRepository.py  HistoryRepository.py  ImageRepository.py  Item.py  User.py  UserRepository.py  WebHookRepository.py
app/routers/: AuthRouter.py  ContactRouter.py  HistoryRouter.py  ImageRouter.py  UserRouter.py  WebHookRouter.py  __init__.py
app/schemas/: Item.py  User.py
app/services/: AuthService.py  ContactService.py  HistoryService.py  ImageService.py  WebHookService.py
app/settings/: config.py  database.py
